[gd_scene load_steps=15 format=3 uid="uid://chmh5oc0s1yja"]

[ext_resource type="Script" uid="uid://brkpn8ugmsnan" path="res://scenes/cutScenes/lava_cut_scene.gd" id="1_5oama"]
[ext_resource type="Texture2D" uid="uid://5ohc5uyvikge" path="res://assets/sprites/characters/lava/Lava_Girl_(Fumbled).png" id="1_i8bvy"]
[ext_resource type="Texture2D" uid="uid://bsy0emvyhqve2" path="res://assets/sprites/characters/lava/Lava_Girl.png" id="3_5oama"]
[ext_resource type="Texture2D" uid="uid://b7toosx8t3bwo" path="res://assets/sprites/characters/lava/Lava_Girl_(Rizzed).png" id="4_5oama"]
[ext_resource type="Texture2D" uid="uid://d3yigpvs662x3" path="res://assets/sprites/characters/slime/Slime_Girl.png" id="4_c5w8y"]
[ext_resource type="FontFile" uid="uid://cbg64k33l5rx" path="res://assets/fonts/CourierPrime-Italic.ttf" id="6_fgrm7"]
[ext_resource type="FontFile" uid="uid://cavhd85s13x3y" path="res://assets/fonts/CourierPrime-Bold.ttf" id="7_l71s6"]
[ext_resource type="FontFile" uid="uid://bsecanfkcihrl" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="8_85wod"]

[sub_resource type="Resource" id="Resource_pa7yu"]
metadata/__load_path__ = "res://assets/sprites/characters/slime/Slime_Girl_Fumbled.png"

[sub_resource type="Animation" id="Animation_g85jp"]
resource_name = "Fumble"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/FailChoice:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/SuccessChoice:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Dialogue:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Ughhh, that was so lame it physically hurt.
If you can’t take the heat, get out of my sight"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/Waify:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 8.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("1_i8bvy"), SubResource("Resource_pa7yu")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer/Break:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ipgsv"]
resource_name = "MeetCute"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/FailChoice:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/SuccessChoice:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Dialogue:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.0333333, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["I admire your courage, little machine.
Let’s see if you can keep up.", "Tch. You seriously think you can handle me?
You must be overheating."]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/Break:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer/Waify:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5oama")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/NextLevel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer/Retry:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yxl3i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/FailChoice:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/SuccessChoice:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/Dialogue:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Uwaa~! Y-You're looking at me so much...
Am I melting?!"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/Waify:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_c5w8y")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer/Break:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/Retry:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer/NextLevel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pma22"]
resource_name = "Success"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Waify:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_5oama")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Dialogue:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Tch! D-Don’t say stuff like that so casually!
I-I’m not blushing, shut up!"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer/SuccessChoice:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/FailChoice:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer/Break:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/Retry:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer/NextLevel:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yxl3i"]
_data = {
&"Fumble": SubResource("Animation_g85jp"),
&"MeetCute": SubResource("Animation_ipgsv"),
&"RESET": SubResource("Animation_yxl3i"),
&"Success": SubResource("Animation_pma22")
}

[node name="LavaCutScene" type="Node2D"]
script = ExtResource("1_5oama")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yxl3i")
}
autoplay = "MeetCute"

[node name="WindowBkg" type="ColorRect" parent="AnimationPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
color = Color(0, 0, 0, 0.819608)

[node name="SceneBkg" type="ColorRect" parent="AnimationPlayer"]
offset_top = 98.0
offset_right = 1151.0
offset_bottom = 400.0
color = Color(0.246026, 0.0351063, 0.0610705, 1)

[node name="Waify" type="TextureRect" parent="AnimationPlayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.573
offset_top = -271.0
offset_right = 154.573
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_c5w8y")
expand_mode = 3

[node name="Dialogue" type="Label" parent="AnimationPlayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -185.0
offset_right = 240.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_fgrm7")
theme_override_font_sizes/font_size = 20
text = "Uwaa~! Y-You're looking at me so much...
Am I melting?!"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 2

[node name="Name" type="Label" parent="AnimationPlayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -202.5
offset_top = -229.0
offset_right = 202.5
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.966737, 0.652769, 0.393053, 1)
theme_override_fonts/font = ExtResource("7_l71s6")
theme_override_font_sizes/font_size = 25
text = "~  Pyrrha, the Magma Girl  ~"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[node name="FailChoice" type="Button" parent="AnimationPlayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -436.5
offset_top = -121.0
offset_right = 436.5
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_85wod")
text = "You’re so hot! Every time I get close, my circuits start to melt"

[node name="SuccessChoice" type="Button" parent="AnimationPlayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -436.5
offset_top = -78.0
offset_right = 436.5
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_85wod")
text = "Overheating? Impossible. My cooling systems are optimized for handling someone as fiery as you."

[node name="Break" type="Label" parent="AnimationPlayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -100.0
offset_right = 15.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.968627, 0.65098, 0.392157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_l71s6")
text = "</>"

[node name="NextLevel" type="Button" parent="AnimationPlayer"]
offset_left = 1051.0
offset_top = 596.0
offset_right = 1117.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("8_85wod")
text = "Next →"

[node name="Retry" type="Button" parent="AnimationPlayer"]
visible = false
offset_left = 1051.0
offset_top = 596.0
offset_right = 1096.0
offset_bottom = 627.0
text = "Retry →"

[connection signal="pressed" from="AnimationPlayer/FailChoice" to="." method="_on_fail_choice_pressed"]
[connection signal="pressed" from="AnimationPlayer/SuccessChoice" to="." method="_on_success_choice_pressed"]
[connection signal="pressed" from="AnimationPlayer/NextLevel" to="." method="_on_next_pressed"]
[connection signal="pressed" from="AnimationPlayer/Retry" to="." method="_on_retry_pressed"]
